TP-349: Allow building on Java11
* Backports changes from the `gs14` branch, in order to support compilation using a java11 jdk.
* Adds explicit exception during startup if the current jre will not support this version of GigaSpaces.
* Reason for backporting changes from the `gs14` branch is to make the diff on that branch smaller, and to make it possible to compile using java11, but still target java8 compatibility.